Edited translations and added a FAB tooltip.

--- a/app/src/main/res/values-it-rIT/strings.xml
+++ b/app/src/main/res/values-it-rIT/strings.xml
@@ -6,4 +6,5 @@
     <string name="menu_inv">Inventario</string>
     <string name="menu_status">Stato</string>
     <string name="menu_scanner">Scanner</string>
+    <string name="fab_tooltip">Modifica l\'inventario</string>
 </resources>
