--- a/app/src/main/res/values-it-rIT/strings.xml
+++ b/app/src/main/res/values-it-rIT/strings.xml
@@ -5,6 +5,7 @@
     <string name="action_settings">Impostazioni</string>
     <string name="menu_inv">Inventario</string>
     <string name="menu_status">Stato</string>
-    <string name="menu_scanner">Scanner</string>
+    <string name="menu_scanner">QR e Barcode Manager</string>
     <string name="fab_tooltip">Modifica l\'inventario</string>
+    <string name="qr_msg">Scansiona un QR Code o un Barcode</string>
 </resources>
