--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,9 +7,11 @@
     <string name="nav_header_desc" translatable="false">Navigation header</string>
     <string name="action_settings">Settings</string>
 
-    <string name="menu_scanner">Scanner</string>
+    <string name="menu_scanner">QR &amp; Barcode Manager</string>
     <string name="menu_inv">Inventory</string>
     <string name="menu_status">Status</string>
 
     <string name="fab_tooltip">Edit your inventory</string>
+
+    <string name="qr_msg">Scan a QR Code or a Barcode</string>
 </resources>
