--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,6 +8,7 @@
     <string name="action_settings">Settings</string>
 
     <string name="menu_scanner">Scanner</string>
+    <string name="menu_add">Add product</string>
     <string name="menu_inv">Inventory</string>
     <string name="menu_status">Status</string>
 
