New loading dialog while checking the connection.

--- a/app/src/main/res/values-it-rIT/strings.xml
+++ b/app/src/main/res/values-it-rIT/strings.xml
@@ -14,4 +14,5 @@
     <string name="server_ip">Server IP</string>
     <string name="server_port">Porta server</string>
     <string name="menu_add">Aggiungi prodotto</string>
+    <string name="loading_msg">Caricamento...</string>
 </resources>
