--- a/app/src/main/res/values-it-rIT/strings.xml
+++ b/app/src/main/res/values-it-rIT/strings.xml
@@ -2,11 +2,9 @@
 <resources>
     <string name="navigation_drawer_open">Apri il drawer di navigazione</string>
     <string name="navigation_drawer_close">Chiudi il drawer di navigazione</string>
-    <string name="action_settings">Impostazioni</string>
     <string name="menu_inv">Inventario</string>
     <string name="menu_status">Stato</string>
     <string name="menu_scanner">Scanner</string>
-    <string name="fab_tooltip">Modifica l\'inventario</string>
     <string name="qr_msg">Scansiona un QR Code o un Barcode</string>
     <string name="cam_perm">Quest\'app necessita di accesso alla fotocamera per funzionare correttamente</string>
     <string name="canceled_scan">Lo scan è stato annullato</string>
@@ -37,4 +35,5 @@
     <string name="unknown_err">Errore sconosciuto</string>
     <string name="no_server_response">Nessuna risposta dal server</string>
     <string name="not_found">Non trovato</string>
+    <string name="to">a</string>
 </resources>
