--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,14 +5,11 @@
     <string name="nav_header_title" translatable="false">Stocked</string>
     <string name="nav_header_subtitle" translatable="false">stocked@support.com</string>
     <string name="nav_header_desc" translatable="false">Navigation header</string>
-    <string name="action_settings">Settings</string>
 
     <string name="menu_scanner">Scanner</string>
     <string name="menu_add">Add product</string>
     <string name="menu_inv">Inventory</string>
     <string name="menu_status">Status</string>
-
-    <string name="fab_tooltip">Edit your inventory</string>
 
     <string name="qr_msg">Scan a QR Code or a Barcode</string>
     <string name="cam_perm">This app needs to access the camera to work properly</string>
@@ -47,4 +44,5 @@
     <string name="unknown_err">Unknown error</string>
     <string name="no_server_response">The server hasn\'t replied in time</string>
     <string name="not_found">Not found</string>
+    <string name="to">to</string>
 </resources>
