--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -50,4 +50,5 @@
     <string name="already_existing_prd_name">The inserted product name already exists</string>
     <string name="already_existing_prd_code">The inserted product code already exists</string>
     <string name="rejected_operation">The operation got rejected</string>
+    <string name="missing_prd_code">Missing product code</string>
 </resources>
