Added logout, updated translations and dependencies. Stocked is now on version 1.1.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -52,4 +52,5 @@
     <string name="rejected_operation">The operation got rejected</string>
     <string name="missing_prd_code">Missing product code</string>
     <string name="not_found_add_new_prd">Add a non-existing product via the dedicated section</string>
+    <string name="logout" translatable="false">Logout</string>
 </resources>
